XSCOLIBRI-236: Page Printouts that contains info or warning macro show scrollbars & minor issues Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@31722 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -423,6 +423,7 @@ body.content #contentcolumn .main {
 }
 
 #xwikicontent {
+  clear: both;
   overflow: auto;
   width: 100%;
 }
